# PaperPy

./: LICENSE  README.md  agents.py  app.py  pyproject.toml
evals/: evaluate_rag.py  run_evaluation.py  synthetic_data.py
evals/output/: evaluation_tables_20250806_191153.txt  quick_evaluation_results_topk5.json  synthetic_qa_dataset.json
utils/: __init__.py  chunker.py  vector_store.py
